Implement home, free property search, home evaluation, and first three links on the buyer page.

--- a/app/views/home/_leftnav.html
+++ b/app/views/home/_leftnav.html
@@ -26,7 +26,7 @@
         
         
         
-        <a href="./FreePropertySearch.html" onclick="P7_swapClass(1,
+        <a href="/home/search.html" onclick="P7_swapClass(1,
                                  &#39;p1&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Free Property Search
@@ -39,7 +39,7 @@
         
         
         
-        <a href="./FreeHomeEvaluation.html" onclick="P7_swapClass(1,
+        <a href="/home/evaluation.html" onclick="P7_swapClass(1,
                                  &#39;p3&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Free Home Evaluation
@@ -52,7 +52,7 @@
         
         
         
-        <a href="./BuyerResourceGetAction.html" onclick="P7_swapClass(1,
+        <a href="/home/buyer.html" onclick="P7_swapClass(1,
                                  &#39;p4&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Buyer Resources
