Implement seller pages.

--- a/app/views/home/_buyer.html
+++ b/app/views/home/_buyer.html
@@ -29,10 +29,10 @@ line-height:2em;
 <p><a href="./ThisMonth.html">This Month In Real Estate</a></p>
 <p><a href="./BuyerSteps.html">Eight steps to buying your home</a></p>
 <p><a href="./DecideHowMuch.html">Deciding how much house you can afford</a></p>
-<p><a href="./CreateWishLish.html">Creating your home wishlist</a></p>
+<p><a href="./CreateWishList.html">Creating your home wishlist</a></p>
 <p><a href="./Location.html">Location, Location, Location</a></p>
 <p><a href="./Option.html">Opting for new home construction</a></p>
-<p><a href="./RealtoHelp.html">How can a real estate agent help me?</a></p>
+<p><a href="./RealtorHelp.html">How can a real estate agent help me?</a></p>
 <p><a href="./EightQuestions.html">Eight important questions to ask your agent</a></p>
 <p><a href="./Mortgage.html">Mortgage Calculator</a></p>
 <p><a href="./BuyerFormGetAction.html">Contact us about buying a home</a><br>
