--- a/app/views/home/_decide_how_much.html
+++ b/app/views/home/_decide_how_much.html
@@ -13,7 +13,7 @@ line-height:1em;
 -->
 </style>
 
-<form method="post" action="./BuyerFormGetAction.html">
+<form method="post" action="/home/BuyerFormGetAction.html">
 <table width="100%" border="0" cellspacing="0" cellpadding="3">
 <tbody><tr>
   <td><br>
