--- a/app/views/home/_leftnav.html
+++ b/app/views/home/_leftnav.html
@@ -65,7 +65,7 @@
         
         
         
-        <a href="./SellerResourceGetAction.html" onclick="P7_swapClass(1,
+        <a href="/home/seller.html" onclick="P7_swapClass(1,
                                  &#39;p5&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Seller Resources
