--- a/app/views/home/SellerFormGetAction.html
+++ b/app/views/home/SellerFormGetAction.html
@@ -1488,8 +1488,8 @@
 </script>
 
 
-<form name="SellerResourceForm" method="post" action="http://www.paulhuangrealtor.com/atj/user/SellerFormSubmitAction.do" onsubmit="return validateSellerResourceForm(this);">
-    
+<form name="SellerResourceForm" method="post" action="/home/contacts" onsubmit="return validateSellerResourceForm(this);">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
 
 
