--- a/app/views/home/create_contact.html
+++ b/app/views/home/create_contact.html
@@ -1,5 +1,5 @@
 <div id="mainCol">
-<p>Thank you for contacting me! I will be in touch with you shortly.</p>
+<p><h2><%= @message %></h2></p>
 </div>
 <div id="footer">
 </div>
