--- a/app/views/home/AboutPaul.html
+++ b/app/views/home/AboutPaul.html
@@ -111,7 +111,7 @@ As a consistent Top Multi-Million Dollar Producing Realtor, Paul engages his wor
     </tbody>
 </table>
 </div>
-<div id="personalpic" align="left">&nbsp;<img border="0" alt="" width="640" height="238" usemap="#picframes" src="./AboutPaul_files/frameArrange_1381104520835.jpg"><br>
+<div id="personalpic" align="left">&nbsp;<img border="0" alt="" width="640" height="238" usemap="#picframes" src="/assets/frameArrange_1381104520835.jpg"><br>
 <map name="picframes">
 <area shape="rect" alt="pic1" coords="0,0,140,115" href="http://images.kw.com/agent_photos/1/1/6/116824//library/award1_1381104478385.jpg">
 <area shape="rect" alt="pic1" coords="160,0,310,115" href="http://images.kw.com/agent_photos/1/1/6/116824//library/award2012kw_1381104478526.jpg">
