--- a/app/views/home/FreeHousingTrend.html
+++ b/app/views/home/FreeHousingTrend.html
@@ -30,7 +30,7 @@
         
             <h3 style="text-align: center"><span style="color: #000080">Free Market Trend Report<br>
 </span></h3>
-<div>Housing Trends eNewsletter is filled with latest local and national housing information, most recent Market Update, tools, tips and more. You may find it's useful whether youre in the market for a home, thinking about selling your home, or just interested in homeowner issues in general. <img alt="" style="margin: 5px; width: 278px; float: right; height: 351px" src="./FreeHousingTrend_files/sampimg_1291871740452.jpg"><br>
+<div>Housing Trends eNewsletter is filled with latest local and national housing information, most recent Market Update, tools, tips and more. You may find it's useful whether youre in the market for a home, thinking about selling your home, or just interested in homeowner issues in general. <img alt="" style="margin: 5px; width: 278px; float: right; height: 351px" src="/assets/sampimg_1291871740452.jpg"><br>
 <br>
 <br>
 Sound decisions can only be made with accurate and reliable information, and I am happy to be a trusted resource for you.<br>
