--- a/app/views/home/_leftnav.html
+++ b/app/views/home/_leftnav.html
@@ -87,7 +87,7 @@
                       <li>
 
 			   
-				 <a href="./SchoolMatters.html" id="" title="School Matters">School Matters</a>
+				 <a href="/home/SchoolMatters.html" id="" title="School Matters">School Matters</a>
 			   
 			   
 
@@ -98,7 +98,7 @@
                       <li>
 
 			   
-				 <a href="./FindBestSchools.html" id="" title="Find the Best Schools">Find the Best Schools</a>
+				 <a href="/home/FindBestSchools.html" id="" title="Find the Best Schools">Find the Best Schools</a>
 			   
 			   
 
@@ -109,7 +109,7 @@
                       <li>
 
 			   
-				 <a href="./Neighborhood.html" id="" title="Neighborhood">Neighborhood</a>
+				 <a href="/home/Neighborhood.html" id="" title="Neighborhood">Neighborhood</a>
 			   
 			   
 
@@ -136,7 +136,7 @@
                       <li>
 
 			   
-				 <a href="./AreaLinks.html" id="" title="Area Links">Area Links</a>
+				 <a href="/home/AreaLinks.html" id="" title="Area Links">Area Links</a>
 			   
 			   
 
@@ -147,7 +147,7 @@
                       <li>
 
 			   
-				 <a href="./reloation.html" id="" title="Relocation">Relocation</a>
+				 <a href="/home/reloation.html" id="" title="Relocation">Relocation</a>
 			   
 			   
 
@@ -165,7 +165,7 @@
         
         
         
-        <a href="./ContactMe.html" onclick="P7_swapClass(1,
+        <a href="/home/ContactMe.html" onclick="P7_swapClass(1,
                                  &#39;p8&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Contact Me
@@ -178,7 +178,7 @@
         
         
         
-        <a href="./FreeHousingTrend.html" onclick="P7_swapClass(1,
+        <a href="/home/FreeHousingTrend.html" onclick="P7_swapClass(1,
                                  &#39;p9&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Free Housing Trend &amp; Market Report
@@ -191,7 +191,7 @@
         
         
         
-        <a href="./testimonials.html" onclick="P7_swapClass(1,
+        <a href="/home/testimonials.html" onclick="P7_swapClass(1,
                                  &#39;p10&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             Client Testimonials
@@ -204,7 +204,7 @@
         
         
         
-        <a href="./AboutPaul.html" onclick="P7_swapClass(1,
+        <a href="/home/AboutPaul.html" onclick="P7_swapClass(1,
                                  &#39;p11&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             About Paul
@@ -217,7 +217,7 @@
         
         
         
-        <a href="./ThePaulHuangTeam.html" onclick="P7_swapClass(1,
+        <a href="/home/ThePaulHuangTeam.html" onclick="P7_swapClass(1,
                                  &#39;p12&#39;,
                                  &#39;open&#39;,&#39;closed&#39;,&#39;li&#39;); return true" target="">
             The Paul Huang Team
@@ -251,7 +251,7 @@ Fax: <b>978-759-0233</b><br>
 
 
 
-<a href="./ContactMe.html"> Email</a>
+<a href="/home/ContactMe.html"> Email</a>
 <br>
 <br></div>
 <div id="contact2">
