--- a/app/views/home/_this_month.html
+++ b/app/views/home/_this_month.html
@@ -3,7 +3,7 @@
 <!-- ################ START DYNAMIC CONTENT ################### -->
 <div id="content"><strong>THIS MONTH IN REAL ESTATE<br>
 <br> 
-This Month in Real Estate is a monthly video news series that offers an inside look at the national real estate market. Each edition provides a snapshot of the numbers and trends that drive the real estate market, as well as expert opinion and analysis. For information on your local real estate conditions, please contact your Keller Williams agent.
+This Month in Real Estate is a monthly video news series that offers an inside look at the national real estate market. Each edition provides a snapshot of the numbers and trends that drive the real estate market, as well as expert opinion and analysis. 
 </strong>
 <br>
 <br>
