--- a/app/views/home/ThePaulHuangTeam.html
+++ b/app/views/home/ThePaulHuangTeam.html
@@ -42,7 +42,7 @@ Call us or contact us today with your real estate questions and plans. The soone
 <table border="0" cellspacing="1" cellpadding="1" width="800">
     <tbody>
         <tr>
-            <td width="170"><span style="font-size: small"><img alt="" style="width: 155px; height: 155px" src="./ThePaulHuangTeam_files/nancy3_1359473253659.jpg"><br>
+            <td width="170"><span style="font-size: small"><img alt="" style="width: 155px; height: 155px" src="/assets/nancy3_1359473253659.jpg"><br>
             </span></td>
             <td>
             <div style="margin: 0in 0in 0pt"><strong><font size="3">&nbsp;&nbsp; Nancy Antonopoulos&nbsp;</font></strong> <font size="3">- Real Estate Agent,&nbsp;Realtor® - (978) 835-3040</font>
@@ -63,7 +63,7 @@ Call us or contact us today with your real estate questions and plans. The soone
         </tr>
         <tr>
             <td>
-            <div><img alt="" width="150" height="225" src="./ThePaulHuangTeam_files/Becky_pic_1359434904987.jpg"></div>
+            <div><img alt="" width="150" height="225" src="/assets/Becky_pic_1359434904987.jpg"></div>
             </td>
             <td>
             <div><strong><font size="3"><br>
@@ -77,7 +77,7 @@ Call us or contact us today with your real estate questions and plans. The soone
         </tr>
         <tr>
             <td>
-            <div><img alt="" width="150" height="218" src="./ThePaulHuangTeam_files/Anita_Pic_1359434904999.jpg">&nbsp;</div>
+            <div><img alt="" width="150" height="218" src="/assets/Anita_Pic_1359434904999.jpg">&nbsp;</div>
             </td>
             <td>
             <div><strong><font size="3"><br>
