--- a/app/views/home/_buyer_form.html
+++ b/app/views/home/_buyer_form.html
@@ -1484,8 +1484,8 @@
 </script>
 
 
-    <form name="BuyerResourceForm" method="post" action="http://www.paulhuangrealtor.com/atj/user/BuyerFormSubmitAction.do" onsubmit="return validateBuyerResourceForm(this);">
-
+    <form name="BuyerResourceForm" method="post" action="/home/contacts" onsubmit="return validateBuyerResourceForm(this);">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
         
 
 
@@ -1507,25 +1507,25 @@
     </tr>
     <tr>
         <td colspan="2" align="left">
-            <input type="checkbox" name="interests" value="Making an appointment to view properties">
+            <input type="checkbox" name="interests_view" value="1">
             Making an appointment to view properties
         </td>
     </tr>
     <tr>
         <td colspan="2" align="left">
-            <input type="checkbox" name="interests" value="Information about the area">
+            <input type="checkbox" name="interests_info" value="1">
             Information about the area
         </td>
     </tr>
     <tr>
         <td colspan="2" align="left">
-            <input type="checkbox" name="interests" value="Working with an Agent">
+            <input type="checkbox" name="interests_work" value="1">
             Working with an Agent
         </td>
     </tr>
     <tr>
         <td colspan="2" align="left">
-            <input type="checkbox" name="interests" value="Information Pre-Approved for a Mortgage">
+            <input type="checkbox" name="interests_pre" value="1">
             I'd like information on getting Pre-Approved for a Mortgage   
         </td>
     </tr>
@@ -1768,7 +1768,7 @@
             Features
         </td>
         <td align="left">
-            <select name="features" multiple="multiple" size="8"><option value="Central_Air">Central Air</option>
+            <select name="features[]" multiple="multiple" size="8"><option value="Central_Air">Central Air</option>
                 <option value="Gas_Heat">Gas Heat</option>
                 <option value="Swimming_Pool">Swimming Pool</option>
                 <option value="Spa/Hot_Tub">Spa/Hot Tub</option>
@@ -1793,16 +1793,14 @@
     <tr>
         <td></td>
         <td>
-            
-                <script type="text/javascript" src="./BuyerFormGetAction_files/challenge"> 
-</script><script type="text/javascript" src="./BuyerFormGetAction_files/recaptcha.js"></script><div id="recaptcha_widget_div" style="" class=" recaptcha_nothad_incorrect_sol recaptcha_isnot_showing_audio"><div id="recaptcha_area"><table id="recaptcha_table" class="recaptchatable recaptcha_theme_red"> <tbody><tr> <td colspan="6" class="recaptcha_r1_c1"></td> </tr> <tr> <td class="recaptcha_r2_c1"></td> <td colspan="4" class="recaptcha_image_cell"><center><div id="recaptcha_image" style="width: 300px; height: 57px;"><img id="recaptcha_challenge_image" alt="reCAPTCHA challenge image" height="57" width="300" src="./BuyerFormGetAction_files/image"></div></center></td> <td class="recaptcha_r2_c2"></td> </tr> <tr> <td rowspan="6" class="recaptcha_r3_c1"></td> <td colspan="4" class="recaptcha_r3_c2"></td> <td rowspan="6" class="recaptcha_r3_c3"></td> </tr> <tr> <td rowspan="3" class="recaptcha_r4_c1" height="49"> <div class="recaptcha_input_area"> <span id="recaptcha_challenge_field_holder" style="display: none;"><input type="hidden" name="recaptcha_challenge_field" id="recaptcha_challenge_field" value="03AHJ_VuuQTLc9KFkvXkKS44OZrMTWyQZQ4-Itk3ZavM1XVYzm7HqozWV0CsZbFU2aF68ZDwweG7EG_0v1tV2it4VfAMyjUp8YqbjPCJO282xxHq_EVjZ6BnHDGxXgZf4m1c1AJUtKblbcw7yjNUmHYNY2Cwc76L4sKX8cNjp_zYw5JWXGSsMO3K5ElDappGepOnBz5Nwm6HbohBYTcykjXxqLgZuIqztezw"></span><input name="recaptcha_response_field" id="recaptcha_response_field" type="text" autocorrect="off" autocapitalize="off" placeholder="Type the text" autocomplete="off"> <span id="recaptcha_privacy" class="recaptcha_only_if_privacy"><a href="http://www.google.com/intl/en/policies/" target="_blank">Privacy &amp; Terms</a></span> </div> </td> <td rowspan="4" class="recaptcha_r4_c2"></td> <td><a id="recaptcha_reload_btn" title="Get a new challenge"><img id="recaptcha_reload" width="25" height="17" src="./BuyerFormGetAction_files/refresh.gif" alt="Get a new challenge"></a></td> <td rowspan="4" class="recaptcha_r4_c4"></td> </tr> <tr> <td><a id="recaptcha_switch_audio_btn" class="recaptcha_only_if_image" title="Get an audio challenge"><img id="recaptcha_switch_audio" width="25" height="16" alt="Get an audio challenge" src="./BuyerFormGetAction_files/audio.gif"></a><a id="recaptcha_switch_img_btn" class="recaptcha_only_if_audio" title="Get a visual challenge"><img id="recaptcha_switch_img" width="25" height="16" alt="Get a visual challenge" src="./BuyerFormGetAction_files/text.gif"></a></td> </tr> <tr> <td><a id="recaptcha_whatsthis_btn" title="Help"><img id="recaptcha_whatsthis" width="25" height="16" src="./BuyerFormGetAction_files/help.gif" alt="Help"></a></td> </tr> <tr> <td class="recaptcha_r7_c1"></td> <td class="recaptcha_r8_c1"></td> </tr> </tbody></table> </div></div>
-<noscript>
-&lt;iframe src="http://www.google.com/recaptcha/api/noscript?k=6LcZ8M4SAAAAAIrcVIyAwe1uXsizj-Xk1j_PjZPY" height="300" width="500" frameborder="0"&gt;&lt;/iframe&gt;&lt;br&gt;
-&lt;textarea name="recaptcha_challenge_field" rows="3" cols="40"&gt;
-&lt;/textarea&gt;
-&lt;input type="hidden" name="recaptcha_response_field" value="manual_challenge"&gt;
-</noscript><br>
-            
+            <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LeUGPMSAAAAAAzMV347u5YBDNkd9BCtlJcX-BPX"> 
+            </script>
+            <noscript>
+              <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LeUGPMSAAAAAAzMV347u5YBDNkd9BCtlJcX-BPX" height="300" width="500" frameborder="0"></iframe><br>
+              <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+              </textarea>
+              <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+            </noscript>
         </td>
     </tr>
     <tr>
