--- a/app/views/home/ContactMe.html
+++ b/app/views/home/ContactMe.html
@@ -1481,7 +1481,8 @@
 </script>
 
 
-<form name="ContactUsForm" method="post" action="http://www.paulhuangrealtor.com/atj/user/ContactUsSubmitAction.do" onsubmit="return validateContactUsForm(this);">
+<form name="ContactUsForm" method="post" action="/home/contacts" onsubmit="return validateContactUsForm(this);">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
     <input type="hidden" name="optionalLeadCaptureFlow" value="false">
     
 
@@ -1553,41 +1554,41 @@
             <tbody><tr>
                 <td width="2%"></td>
                 <td width="20%" align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Listing my home">
+                    <input type="checkbox" name="interests_list" value="1">
                         Listing my home
                 </td>
                 <td width="20%" align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Finding an agent">
+                    <input type="checkbox" name="interests_find" value="1">
                         Finding an agent
                 </td>
                 <td width="58%" align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Relocation">
+                    <input type="checkbox" name="interests_relocate" value="1">
                         Relocation
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Receiving a CMA">
+                    <input type="checkbox" name="interests_cma" value="1">
                         Receiving a CMA
                 </td>
                 <td align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Mortgage Info">
+                    <input type="checkbox" name="interests_mortgage" value="1">
                         Mortgage Info
                 </td>
                 <td align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Learning about Careers">
+                    <input type="checkbox" name="interests_career" value="1">
                         Learning about Careers
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Purchasing a property">
+                    <input type="checkbox" name="interests_purchase" value="1">
                         Purchasing a property
                 </td>
                 <td align="left" nowrap="nowrap">
-                    <input type="checkbox" name="interests" value="Other">
+                    <input type="checkbox" name="interests_other" value="1">
                         Other
                 </td>
                 <td align="left"></td>
@@ -1611,16 +1612,14 @@
     <tr>
         <td></td>
         <td>
-            
-                <script type="text/javascript" src="./ContactMe_files/challenge"> 
-</script><script type="text/javascript" src="./ContactMe_files/recaptcha.js"></script><div id="recaptcha_widget_div" style="" class=" recaptcha_nothad_incorrect_sol recaptcha_isnot_showing_audio"><div id="recaptcha_area"><table id="recaptcha_table" class="recaptchatable recaptcha_theme_red"> <tbody><tr> <td colspan="6" class="recaptcha_r1_c1"></td> </tr> <tr> <td class="recaptcha_r2_c1"></td> <td colspan="4" class="recaptcha_image_cell"><center><div id="recaptcha_image" style="width: 300px; height: 57px;"><img id="recaptcha_challenge_image" alt="reCAPTCHA challenge image" height="57" width="300" src="./ContactMe_files/image"></div></center></td> <td class="recaptcha_r2_c2"></td> </tr> <tr> <td rowspan="6" class="recaptcha_r3_c1"></td> <td colspan="4" class="recaptcha_r3_c2"></td> <td rowspan="6" class="recaptcha_r3_c3"></td> </tr> <tr> <td rowspan="3" class="recaptcha_r4_c1" height="49"> <div class="recaptcha_input_area"> <span id="recaptcha_challenge_field_holder" style="display: none;"><input type="hidden" name="recaptcha_challenge_field" id="recaptcha_challenge_field" value="03AHJ_Vusq5x35UOjT0XhY41X7EjyzAAUBQi4bAJF2qSMdIq_g3d2UNO796mhEHYF9uYjsa1rYAoihuJMQRYRYBMkA1LTjeNPWgj_qhmgbgWx2JWe7OLT64__LpDadQiMCFLFytDNNCsUHXyXnGJWopMNRjVvXp_Qc-bp08E5Mitb_tgti1jNKoU1pd3SzaH12zKeXea6kK_CylHGT-XDZkIwTlkJzyUiZJS7NU94RZtQQ7piuVKzerUw"></span><input name="recaptcha_response_field" id="recaptcha_response_field" type="text" autocorrect="off" autocapitalize="off" placeholder="Type the text" autocomplete="off"> <span id="recaptcha_privacy" class="recaptcha_only_if_privacy"><a href="http://www.google.com/intl/en/policies/" target="_blank">Privacy &amp; Terms</a></span> </div> </td> <td rowspan="4" class="recaptcha_r4_c2"></td> <td><a id="recaptcha_reload_btn" title="Get a new challenge"><img id="recaptcha_reload" width="25" height="17" src="./ContactMe_files/refresh.gif" alt="Get a new challenge"></a></td> <td rowspan="4" class="recaptcha_r4_c4"></td> </tr> <tr> <td><a id="recaptcha_switch_audio_btn" class="recaptcha_only_if_image" title="Get an audio challenge"><img id="recaptcha_switch_audio" width="25" height="16" alt="Get an audio challenge" src="./ContactMe_files/audio.gif"></a><a id="recaptcha_switch_img_btn" class="recaptcha_only_if_audio" title="Get a visual challenge"><img id="recaptcha_switch_img" width="25" height="16" alt="Get a visual challenge" src="./ContactMe_files/text.gif"></a></td> </tr> <tr> <td><a id="recaptcha_whatsthis_btn" title="Help"><img id="recaptcha_whatsthis" width="25" height="16" src="./ContactMe_files/help.gif" alt="Help"></a></td> </tr> <tr> <td class="recaptcha_r7_c1"></td> <td class="recaptcha_r8_c1"></td> </tr> </tbody></table> </div></div>
-<noscript>
-&lt;iframe src="http://www.google.com/recaptcha/api/noscript?k=6LcZ8M4SAAAAAIrcVIyAwe1uXsizj-Xk1j_PjZPY" height="300" width="500" frameborder="0"&gt;&lt;/iframe&gt;&lt;br&gt;
-&lt;textarea name="recaptcha_challenge_field" rows="3" cols="40"&gt;
-&lt;/textarea&gt;
-&lt;input type="hidden" name="recaptcha_response_field" value="manual_challenge"&gt;
-</noscript><br>
-            
+            <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LeUGPMSAAAAAAzMV347u5YBDNkd9BCtlJcX-BPX"> 
+            </script>
+            <noscript>
+              <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LeUGPMSAAAAAAzMV347u5YBDNkd9BCtlJcX-BPX" height="300" width="500" frameborder="0"></iframe><br>
+              <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+              </textarea>
+              <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+            </noscript>
         </td>
     </tr>
 <tr>
