Add a footer to all pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Paul Huang, Top Producing Real Estate agent with Gold Medals. Serving Acton,Lexington,Belmont,Newton,Westford,Concord..MA. Speaks Chinese, English</title>
+  <title>Ivy Gate Realty</title>
   <meta http-equiv="X-UA-Compatible" content="IE=7">
   <meta name="verify-v1" content="5i9osGSoVzQAzCcTuTd6_0nsvKECl86U3N85RAgtS1I">
   <meta name="google-site-verification" content="5i9osGSoVzQAzCcTuTd6_0nsvKECl86U3N85RAgtS1I">
